@@ -32,5 +32,4 @@
   <tab label="Project" href="http://hadoop.apache.org/hbase/" />
   <tab label="Wiki" href="http://wiki.apache.org/hadoop/Hbase" />
   <tab label="HBase Documentation" dir="" />  
-  
 </tabs>
