@@ -56,6 +56,8 @@ Release 0.20.2 - Unreleased
                you end up with lots of store files
    HBASE-1867  Tool to regenerate an hbase table from the data files
    HBASE-1829  Make use of start/stop row in TableInputFormat
+   HBASE-1904  Add tutorial for installing HBase on Windows using Cygwin as a
+               test and development environment (Wim Van Leuven via Stack)
    HBASE-1968  Give clients access to the write buffer
 
 Release 0.20.1 - Released October 12th, 2009
